# CMakeList.txt: runtime 的 CMake 项目，在此处包括源代码并定义


#-----------------------------------------------------------------------------+
#    配置预处理器
#------------------------------------------------------------------------------
add_compile_definitions(___FNATASIA_EXPORTS)


#-----------------------------------------------------------------------------+
#    配置源代码文件
#------------------------------------------------------------------------------
file(GLOB_RECURSE incs "${CMAKE_CURRENT_SOURCE_DIR}/../../Include/*")
file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/*")


#-----------------------------------------------------------------------------+
#    配置项目输出库文件
#------------------------------------------------------------------------------
add_library("Fantasia.Runtime" SHARED ${srcs} ${incs})


set_target_properties(
    "Fantasia.Runtime"
    PROPERTIES 
    CXX_VISIBILITY_PRESET      hidden
    VISIBILITY_INLINES_HIDDEN  ON
)


#-----------------------------------------------------------------------------+
#    项目安装配置
#------------------------------------------------------------------------------
